# hdp-cairo

./: .bumpversion.cfg  .codespellrc  .dockerignore  .env.example  .gitignore  .gitmodules  .tool-versions  Cargo.toml  Dockerfile  Makefile  README.md  Scarb.toml  ci.dockerfile  compile.sh  diff  environment.dockerfile  example.env  format.sh  full_test.dockerfile  install-cli.sh  install.sh  package.md  pyproject.toml  response.txt  run.sh  rust-toolchain.toml  rustfmt.toml  setup.py  setup.sh  tranform_params.py  typos.toml
cairo_vm_hints/: Cargo.toml
cairo_vm_hints/src/: lib.rs  main.rs
cairo_vm_hints/src/cairo_types/: mod.rs  new_syscalls.rs  structs.rs  traits.rs
cairo_vm_hints/src/cairo_types/evm/: account.rs  header.rs  mod.rs  receipt.rs  storage.rs  transaction.rs
cairo_vm_hints/src/hint_processor/: input.rs  mod.rs  models.rs  output.rs  run_input.rs
cairo_vm_hints/src/hint_processor/models/: mod.rs
cairo_vm_hints/src/hints/: mod.rs  vars.rs
cairo_vm_hints/src/hints/lib/: mod.rs  print.rs  segments.rs
cairo_vm_hints/src/provider/: mod.rs
cairo_vm_hints/src/provider/evm/: mod.rs  traits.rs
cairo_vm_hints/src/provider/indexer/: mod.rs  types.rs
cairo_vm_hints/src/syscall_handler/: call_contract.rs  mod.rs  traits.rs  utils.rs
cairo_vm_hints/src/syscall_handler/keys/: account.rs  header.rs  mod.rs  storage.rs
cairo_vm_hints/src/syscall_handler/starknet/: mod.rs
cairo_vm_hints/src/tests/: mod.rs
crates/cairo_types/: Cargo.toml
crates/cairo_types/src/: structs.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/dry_hint_processor/: Cargo.toml
crates/dry_hint_processor/src/: input.rs  lib.rs  output.rs  run_input.rs  scopes.rs
crates/dry_run/: Cargo.toml  build.rs
crates/dry_run/src/: lib.rs  main.rs
crates/fetcher/: Cargo.toml  README.md
crates/fetcher/src/: lib.rs  main.rs  proof_keys.rs
crates/hints/: Cargo.toml
crates/hints/src/: lib.rs  print.rs  segments.rs  vars.rs
crates/hints/src/rlp/: mod.rs  (+3 more)
crates/indexer_client/: Cargo.toml
crates/indexer_client/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: dry_run.rs  error.rs  fetch_proofs.rs  main.rs  sound_run.rs
crates/server/tests/: expected_hdp_keys.json  hdp_input.json  hdp_keys.json  hdp_proofs.json  input_hdp_keys.json
crates/sound_hint_processor/: Cargo.toml
crates/sound_hint_processor/src/: input.rs  lib.rs  output.rs
crates/sound_run/: Cargo.toml  build.rs
crates/sound_run/src/: lib.rs  main.rs  prove.rs
crates/state_server/: Cargo.toml  README.md
crates/state_server/src/: lib.rs  main.rs
crates/syscall_handler/: Cargo.toml
crates/syscall_handler/src/: debug.rs  keccak.rs  lib.rs  memorizer.rs  traits.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs  param.rs
tests/: Cargo.toml  Scarb.toml  build.rs
tests/cairo_programs/: account_decoder.cairo  aggregate_functions.cairo  bit_length.cairo  block_sampled_datalake.cairo  block_sampled_task.cairo  computational_task.cairo  construct_mmr_test.cairo  count_if_test.cairo  dw_hack_test.cairo  encode_packed_256_256_test.cairo  extract_block_number_test.cairo  extract_bytes_test.cairo  extract_state_root_test.cairo  full_flow.cairo  header_decoder.cairo  height_test.cairo  is_valid_mmr_size.cairo  memorizer_access.cairo  merkle.cairo  min_max_test.cairo  mpt_prove_EOA_test.cairo  peaks_test.cairo  receipt_decoder.cairo  rlp.cairo  rlp_to_uint_decoding.cairo  sn_header_decoder.cairo  starknet_storage_verifier.cairo  test_vectors.cairo  tx_decoder.cairo  txs_in_block_datalake.cairo  uint256.cairo
tests/cairo_programs/fixtures/: account_balance_avg.json  header_sum_gas_fee_per_gas.json  storage_avg.json  storage_sum.json  tx_avg_nonce.json  tx_avg_value.json  tx_sum_value.json
tests/fuzzing/: header_decode.cairo  receipt_decode.cairo  tx_decode.cairo
tests/hdp/: account_decoder.cairo  aggregate_functions.cairo  block_sampled_datalake.cairo  block_sampled_task.cairo  decode_values.cairo  full_flow.cairo  header_decoder.cairo  header_decoding.cairo  merkle.cairo  operations.cairo  rlp_to_uint_decoding.cairo  test_vectors.cairo  tx_decoder.cairo  txs_in_block_datalake.cairo
tests/hdp/fixtures/: account_balance_avg.json  account_nonce_sum.json  readme.md  storage_avg.json  storage_sum.json
tests/modules/: Scarb.toml  build.rs
tests/modules/account_modules/: Scarb.toml
tests/modules/header_modules/: Scarb.toml
tests/modules/receipt_modules/: Scarb.toml
tests/modules/src/: evm.cairo  lib.rs  tests.cairo
tests/modules/storage_modules/: Scarb.toml
tests/modules/transaction_modules/: Scarb.toml
tests/python/: test_header_decoding.py  test_poseidon_hash_block.py  test_receipt_decoding.py  test_tx_decoding.py  test_verify_getproof.py
tests/src/: evm.cairo  hashers.cairo  lib.cairo  lib.rs  starknet_modules.cairo  test_state_server.rs
tests/src/evm/: account_modules.cairo  account_modules.rs  fetcher_modules.cairo  fetcher_modules.rs  header_modules.cairo  header_modules.rs  header_modules.sh  log_modules.cairo  log_modules.rs  mod.rs  receipt_modules.cairo  receipt_modules.rs  storage_modules.cairo  storage_modules.rs  storage_modules.sh  transaction_modules.cairo  transaction_modules.rs
tests/src/evm_modules/: account_modules.cairo  account_modules.rs  account_modules.sh  fetcher_modules.cairo  header_modules.cairo  header_modules.rs  log_modules.cairo  log_modules.rs  receipt_modules.cairo  storage_modules.cairo  transaction_modules.cairo  transaction_modules.rs
tests/src/hashers/: keccak_modules.cairo  mod.rs  pedersen_modules.cairo  poseidon_modules.cairo  tests_runner.rs
tests/src/injected_state/: modules.cairo  modules.rs
tests/src/starknet/: header_modules.cairo  header_modules.rs  storage_modules.cairo  storage_modules.rs
tests/src/starknet_modules/: header_modules.cairo  header_modules.rs  storage_modules.cairo  storage_modules.rs
tests/src/unconstrained/: bytecode.cairo  bytecode.rs
tests/src/utils/: debug.cairo  debug.rs
tests/utils/: account.cairo  header.cairo  receipt.cairo  starknet_header.cairo  tx.cairo
(+1004 files in other folders)
