[workspace]
resolver = "2"

members = [
    "crates/cairo_type_derive",
    "crates/dry_hint_processor",
    "crates/dry_run",
    "crates/fetcher",
    "crates/hints",
    "crates/indexer",
    "crates/sound_hint_processor",
    "crates/sound_run",
    "crates/state_server",
    "crates/state_server/src/crates/trie-builder",
    "crates/syscall_handler",
    "crates/types",
    "crates/cli",
    "tests",
]

[workspace.dependencies]
alloy = { version = "0.12.5", features = ["full"] }
alloy-rlp = { version = "0.3.5", features = ["derive"] }
alloy-trie = { version = "0.8.1", features = ["ethereum", "serde"] }
anyhow = "1.0.95"
axum = { version = "0.8", features = ["tracing"] }
bincode = { version = "=2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
bincode_derive = { version = "=2.0.0-rc.3" }

cairo-lang-casm = { version = "2.11.2", default-features = false }
cairo-lang-starknet-classes = "2.11.2"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.0.1", features = [
    "extensive_hints",
    "clap",
    "cairo-1-hints",
    "mod_builtin",
] }
clap = { version = "4.3.10", features = ["derive"] }
dotenvy = "0.15.7"
eth-trie-proofs = "0.1.2"
futures = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
http-body-util = "0.1.0"
indicatif = "0.17.9"
keccak = "0.1.5"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["hex"] }
sha3 = "0.10.8"
starknet = "0.13.0"
starknet-core = { version = "0.11.1", default-features = false }
starknet-crypto = { version = "0.7.1", default-features = false }
starknet-types-core = { version = "0.1.6", default-features = false }
strum_macros = "0.26.4"
thiserror = "1.0.64"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
version-compare = "0.0.11"

cairo_type_derive = { path = "crates/cairo_type_derive" }
dry_hint_processor = { path = "crates/dry_hint_processor" }
dry_run = { path = "crates/dry_run" }
eth_essentials_cairo_vm_hints = { path = "packages/eth_essentials/cairo_vm_hints" }
fetcher = { path = "crates/fetcher" }
hints = { path = "crates/hints" }
indexer = { path = "crates/indexer" }
pathfinder_gateway_types = { git = "https://github.com/petscheit/pathfinder", package = "starknet-gateway-types" }
pathfinder-common = { git = "https://github.com/petscheit/pathfinder"}
pathfinder-crypto = { git = "https://github.com/petscheit/pathfinder"}
sound_hint_processor = { path = "crates/sound_hint_processor" }
sound_run = { path = "crates/sound_run" }
state_server = { path = "crates/state_server" }
trie-builder = { path = "crates/state_server/src/crates/trie-builder" }
syscall_handler = { path = "crates/syscall_handler" }
types = { path = "crates/types" }

uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
tower = { version = "0.4", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }

pathfinder-merkle-tree = { git = "https://github.com/petscheit/pathfinder" }
pathfinder-storage = { git = "https://github.com/petscheit/pathfinder" }
cairo-type-derive = { git = "https://github.com/keep-starknet-strange/snos.git", branch = "main" }
bitvec = "1.0.1"
eth_trie = "0.5.0"
fake = { version = "=2.10.0", features = ["derive", "serde_json"] }
futures-util = "0.3.31"                                                                            # From trie-builder
hex-literal = "1.0.0"
num_cpus = "1.16.0"
once_cell = "1.21.3"
primitive-types = { version = "0.13.1", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
rand_distr = "0.4"
api = { path = "src/crates/api" }
cairo_runner = { path = "src/crates/cairo-runner" }
