[workspace]
resolver = "2"

members = [
    "crates/cairo_type_derive",
    "crates/dry_hint_processor",
    "crates/dry_run",
    "crates/fetcher",
    "crates/hints",
    "crates/indexer",
    "crates/sound_hint_processor",
    "crates/sound_run",
    "crates/state_server",
    "crates/syscall_handler",
    "crates/types",
    "crates/cli",
    "tests",
]

[workspace.dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-trie = { version = "0.9", features = ["ethereum", "serde"] }
anyhow = "1.0.100"
api = { path = "src/crates/api" }
axum = { version = "0.8", features = ["tracing"] }
bincode = "2.0.1"
bitvec = "1.0.1"
bytemuck = { version = "1.20", features = ["derive"] }
cairo_runner = { path = "src/crates/cairo-runner" }
cairo_type_derive = { path = "crates/cairo_type_derive" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
cairo-lang-casm = "2.12.3"
cairo-lang-starknet-classes = "2.12.3"
cairo-type-derive = { git = "https://github.com/keep-starknet-strange/snos.git", rev = "2dc07a4298e2954c774f4d419a8f9db007da494c" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
dry_hint_processor = { path = "crates/dry_hint_processor" }
dry_run = { path = "crates/dry_run" }
eth_essentials_cairo_vm_hints = { path = "packages/eth_essentials/cairo_vm_hints" }
eth-trie-proofs = { git = "https://github.com/HerodotusDev/trie-proofs.git", rev = "e7aac1a0d410e7217eb150ac793c50e24c88b2b4"}
fetcher = { path = "crates/fetcher" }
futures = "0.3.31"
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
hints = { path = "crates/hints" }
http-body-util = "0.1.0"
indexer = { path = "crates/indexer" }
indicatif = "0.18.0"
keccak = "0.1.5"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
pathfinder_gateway_types = { git = "https://github.com/HerodotusDev/pathfinder.git", package = "starknet-gateway-types", rev = "f173c93efabe421b5500dc319dafa75b8fa3c7a8" }
pathfinder-common = { git = "https://github.com/HerodotusDev/pathfinder.git", rev = "f173c93efabe421b5500dc319dafa75b8fa3c7a8"}
pathfinder-crypto = { git = "https://github.com/HerodotusDev/pathfinder.git", rev = "f173c93efabe421b5500dc319dafa75b8fa3c7a8"}
pathfinder-merkle-tree = { git = "https://github.com/HerodotusDev/pathfinder.git", rev = "f173c93efabe421b5500dc319dafa75b8fa3c7a8"}
pathfinder-storage = { git = "https://github.com/HerodotusDev/pathfinder.git", rev = "f173c93efabe421b5500dc319dafa75b8fa3c7a8"}
r2d2 = "0.8.10"
r2d2_sqlite = "0.31"
rand = "0.8"
reqwest = "0.12"
rusqlite = "0.37" 
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["hex"] }
sha3 = "0.10.8"
sound_hint_processor = { path = "crates/sound_hint_processor" }
sound_run = { path = "crates/sound_run" }
starknet = "0.17.0"
starknet-core = { version = "0.16.0", default-features = false }
starknet-crypto = { version = "0.7.4", default-features = false }
starknet-types-core = { version = "0.1.7", default-features = false }
state_server = { path = "crates/state_server" }
strum_macros = "0.27"
stwo_cairo_adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a", package = "stwo-cairo-adapter" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
syscall_handler = { path = "crates/syscall_handler" }
thiserror = "2.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
types = { path = "crates/types" }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
version-compare = "0.2.0"
