[package]
name = "tests_modules"
version = "0.1.0"
edition = "2021"

[dependencies]
test-context = "0.4.1"

[dev-dependencies]
alloy.workspace = true
anyhow.workspace = true
axum.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm.workspace = true
dotenvy.workspace = true
dry_hint_processor.workspace = true
fetcher.workspace = true
futures.workspace = true
hints.workspace = true
indexer_client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sound_hint_processor.workspace = true
starknet-crypto.workspace = true
state_server.workspace = true
syscall_handler.workspace = true
tokio.workspace = true
tracing.workspace = true
types.workspace = true
