[package]
name = "cairo_types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
cairo-vm.workspace = true
starknet-crypto.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-type-derive.workspace = true
alloy-rlp.workspace = true
strum_macros.workspace = true