[package]
name = "hdp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
dry_run = { path = "../dry_run" }
fetcher = { path = "../fetcher" }
sound_run = { path = "../sound_run" }
syscall_handler.workspace = true
hints.workspace = true
types.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm.workspace = true
tokio.workspace = true
serde_json.workspace = true
dry_hint_processor.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true
futures.workspace = true
indexer.workspace = true
indicatif.workspace = true
reqwest.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
eth-trie-proofs.workspace = true
sound_hint_processor.workspace = true
