[package]
name = "dry_run"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm.workspace = true
clap.workspace = true
dry_hint_processor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

hints.workspace = true
types.workspace = true

[build-dependencies]
sha2 = "0.10.6"