[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
alloy.workspace = true
cairo-vm.workspace = true
alloy-rlp.workspace = true
clap.workspace = true
dry_hint_processor.workspace = true
futures.workspace = true
indexer.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
types.workspace = true
eth-trie-proofs.workspace = true
syscall_handler.workspace = true

[features]
default = []
progress_bars = []
