[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
alloy-rlp.workspace = true
alloy.workspace = true
cairo-vm.workspace = true
clap.workspace = true
dotenvy.workspace = true
dry_hint_processor.workspace = true
eth-trie-proofs.workspace = true
futures.workspace = true
indexer_client.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
state_server.workspace = true
syscall_handler.workspace = true
thiserror.workspace = true
tokio.workspace = true
types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
progress_bars = []
