[package]
name = "hints"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp.workspace = true
alloy.workspace = true
bincode.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-type-derive.workspace = true
cairo-vm.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

eth_essentials_cairo_vm_hints.workspace = true
types.workspace = true