[package]
name = "indexer_client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
cairo-vm.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true