[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
fetcher.workspace = true
cairo-vm.workspace = true
dry_hint_processor.workspace = true
sound_hint_processor.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
types.workspace = true
hints.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower = "0.5.2"
