[package]
name = "sound_run"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
cairo-vm.workspace = true
clap.workspace = true
serde_json.workspace = true
sound_hint_processor.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
types.workspace = true

[build-dependencies]
sha2 = "0.10.6"