[package]
name = "state_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server dependencies
axum = { version = "0.7", features = ["json", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = "5.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { workspace = true }

# Cryptographic dependencies
sha3 = { workspace = true }
hex = "0.4"
chrono = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Pathfinder dependencies
alloy-rlp.workspace = true
alloy.workspace = true
bincode.workspace = true
bitvec.workspace = true
dotenvy.workspace = true
eth_trie.workspace = true
http-body-util.workspace = true
pathfinder-common.workspace = true
pathfinder-crypto.workspace = true
pathfinder-merkle-tree.workspace = true
pathfinder-storage.workspace = true
primitive-types.workspace = true
r2d2_sqlite.workspace = true
r2d2.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_with.workspace = true
starknet-types-core.workspace = true
types.workspace = true

[dev-dependencies]
tower.workspace = true
urlencoding = "2.1"
