[package]
name = "syscall_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm.workspace = true
keccak.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
serde.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
types.workspace = true
