[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp.workspace = true
alloy.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-type-derive.workspace = true
cairo-vm.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
starknet-types-rpc.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
