[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp.workspace = true
alloy.workspace = true
bitvec.workspace = true
cairo_type_derive.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm.workspace = true
clap.workspace = true
pathfinder_gateway_types.workspace = true
pathfinder-common.workspace = true
pathfinder-crypto.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-crypto.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
version-compare.workspace = true
