[package]
name = "trie-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.7.2", features = ["full"] }

pathfinder-merkle-tree = { workspace = true }
pathfinder-common = { workspace = true }
pathfinder-storage = { workspace = true }
pathfinder-crypto = { workspace = true }
state-server-types = { path = "../types" }

bincode = { workspace = true }
bincode_derive = { workspace = true }
fake = { workspace = true }

r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
bitvec = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

hex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
primitive-types = { workspace = true }
tokio = { workspace = true }
eth_trie = { workspace = true }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }
hex-literal = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
num_cpus = { workspace = true }
