[package]
name = "state-server-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
alloy = { workspace = true }
alloy-trie = { workspace = true }
thiserror = { workspace = true }
bitvec = { workspace = true }
pathfinder-common = { workspace = true }
pathfinder-crypto = { workspace = true }
primitive-types = { workspace = true }
tiny-keccak = { workspace = true }
alloy-rlp = { workspace = true }
eth_trie = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
